Adding alphabet divider in the list.

--- a/backend/webapp/src/main/webapp/frontend/templates/tab-contactables.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tab-contactables.html
@@ -22,13 +22,15 @@
                     class="item-avatar item-icon-left item-remove-animate"
                     type="item-text-wrap"
                     href="#/tab/contactables/{{contactable.$$instanceId}}" >
+                <div class="item item-divider" ng-if="firstLetter(contactable.name) != firstLetter(contactable[$index-1].name)">
+                    {{firstLetter(speaker.name)}}
+                </div>
+                <h3>{{contactable.name}}</h3>
                 <div ng-if="contactable.type == 'Contact'">
-                    <h3>{{contactable.name}}</h3>
                     <p>{{contactable.company}}</p>
                     <i class="icon ion-android-contact"></i>
                 </div>
                 <div ng-if="contactable.type == 'Contact Group'">
-                    <h3>{{contactable.name}}</h3>
                     <p>{{contactable.country}}</p>
                     <i class="icon ion-android-contacts"></i>
                 </div>
