--- a/backend/webapp/src/main/webapp/frontend/templates/tab-contactables.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tab-contactables.html
@@ -41,8 +41,8 @@
 
     </ion-content>
 
-  <div class="bar bar-footer bar-assertive" ng-if="ctrl.message">
-    <h2 class="title">{{ ctrl.message }}</h2>
-  </div>
+    <ion-footer-bar class="bar-clear bar-assertive" ng-show="ctrl.message">
+        <p class="title">{{ ctrl.message }}</p>
+    </ion-footer-bar>
 
 </ion-view>
