--- a/frontend/www/css/style.css
+++ b/frontend/www/css/style.css
@@ -7,3 +7,12 @@
 .bar.bar-footer p.title {
     font-size: 14px;
 }
+
+.col-66 span {
+    vertical-align: -webkit-baseline-middle;
+}
+
+.col-33 a.button,
+.col-33 button {
+    width: 100%;
+}
