--- a/frontend/www/templates/about.html
+++ b/frontend/www/templates/about.html
@@ -7,50 +7,50 @@
 
     <ion-content class="padding">
 
+        <button class="button button-calm button-block"
+                ng-if="!hasUpdate"
+                ng-click="ctrl.downloadContacts()">
+            Download contacts
+        </button>
+
+        <button class="button button-balanced button-block"
+                ng-if="!hasUpdate"
+                ng-click="checkForUpdates()" disabled>
+            Check for app updates
+        </button>
+
+        <button class="button button-energized button-block"
+                ng-if="hasUpdate"
+                ng-click="doUpdate()" disabled>
+            Download app update
+        </button>
+
         <div class="list card">
             <div class="item item-divider">
                 Platform
             </div>
             <div class="item">
-                Platform: {{platform.platform}}
+                Platform: {{ctrl.platform.platform}}
                 <br/>
-                Version: {{platform.platformVersion}}
-                <br/>
-                <span ng-show="platform.isAndroid">running on Android</span>
-                <span ng-show="platform.isIOS">running on iOS</span>
-                <span ng-show="platform.isIPad">running on iPad</span>
-                <span ng-show="platform.isWindowsPhone">running on Windows Phone</span>
-                <span ng-show="platform.isWebView">running on (Cordova) Web View</span>
+                Version: {{ctrl.platform.platformVersion}}
             </div>
-        </div>
-
-        <div class="list card">
-            <div class="item item-divider">
-                Device info
+            <div class="item">
+                <span ng-show="ctrl.platform.isAndroid">running on Android</span>
+                <span ng-show="ctrl.platform.isIOS">running on iOS</span>
+                <span ng-show="ctrl.platform.isIPad">running on iPad</span>
+                <span ng-show="ctrl.platform.isWindowsPhone">running on Windows Phone</span>
+                <span ng-show="ctrl.platform.isWebView">running on (Cordova) Web View</span>
             </div>
-            <div ng-show="isDefinedWithLength(platform.deviceInformation)">
-                <div class="item">
+            <div class="item">
+                Device info:
+                <span ng-show="isDefinedWithLength(ctrl.platform.deviceInformation)">
                     {{platform.deviceInformation}}
-                </div>
-            </div>
-            <div ng-show="!isDefinedWithLength(platform.deviceInformation)">
-                <div class="item">
+                </span>
+                <span ng-show="!isDefinedWithLength(ctrl.platform.deviceInformation)">
                     (none available)
-                </div>
+                </span>
             </div>
         </div>
-
-        <button class="button button-balanced button-block"
-                ng-if="!hasUpdate"
-                ng-click="checkForUpdates()">
-            Check for updates
-        </button>
-
-        <button class="button button-energized button-block"
-                ng-if="hasUpdate"
-                ng-click="doUpdate()">
-            Download update
-        </button>
 
     </ion-content>
 
