ELI-8: moved the download functionality to a new download tab (from about page, which doesn't work because the user wouldn't be logged in there).

--- a/backend/webapp/src/main/webapp/frontend/templates/tabs.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tabs.html
@@ -8,6 +8,13 @@
         <ion-nav-view name="tab-contactables"></ion-nav-view>
     </ion-tab>
 
+    <ion-tab title="Download"
+             icon-off="ion-android-download"
+             icon-on="ion-android-download"
+             href="#/tab/download">
+        <ion-nav-view name="tab-download"></ion-nav-view>
+    </ion-tab>
+
 </ion-tabs>
 
 
