--- a/frontend/www/templates/tabs.html
+++ b/frontend/www/templates/tabs.html
@@ -8,6 +8,13 @@
         <ion-nav-view name="tab-contactables"></ion-nav-view>
     </ion-tab>
 
+    <ion-tab title="Download"
+             icon-off="ion-android-download"
+             icon-on="ion-android-download"
+             href="#/tab/download">
+        <ion-nav-view name="tab-download"></ion-nav-view>
+    </ion-tab>
+
 </ion-tabs>
 
 
